--- a/Gestionnaire de taches/src/gdt/res/lang_fr.properties
+++ b/Gestionnaire de taches/src/gdt/res/lang_fr.properties
@@ -7,8 +7,8 @@ Tasks=Taches :
 Projects=Projets :
 Username=Nom d'utilisateur :
 Password=Mot de passe :
-Connection=Connexion
-Register=Inscription
+Connection=Se connecter
+Register=S'inscrire
 Private=Priv\u00e9e
 Add_Project=ajouter projet :
 Add_Task=ajouter tache :
